# microRPC

./: .gitignore  CMakeLists.txt  README.md
include/: dataTable.h  helpers.h  microRPC.h
src/: a.out  microRPC  microRPC.c  microRPC.h
src/main.dSYM/Contents/Resources/DWARF/: main
src/microRPC.dSYM/Contents/: Info.plist
src/microRPC.dSYM/Contents/Resources/DWARF/: microRPC
tests/: CMakeLists.txt  a.out  helpersTest  helpersTest.c  microRPCTest  microRPCTest.c  microRPCTest.h
tests/include/: dataTable.h  microRPCTest.h  testCommands.txt
tests/microRPCTest.dSYM/Contents/: Info.plist
tests/microRPCTest.dSYM/Contents/Resources/DWARF/: microRPCTest
